--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,10 +9,17 @@
         android:icon="@drawable/icon"
         android:label="@string/app_name"
         android:roundIcon="@drawable/icon"
+        android:screenOrientation="landscape"
         android:supportsRtl="true"
         android:theme="@style/Theme.Personal_computer"
-        android:screenOrientation="landscape"
         tools:targetApi="31">
+        <activity
+            android:name=".maket_listView"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
         <activity
             android:name=".fragment_info"
             android:exported="false">
